altcha and honeypot

--- a/deploy/.env.example
+++ b/deploy/.env.example
@@ -22,6 +22,9 @@ MEILI_MASTER_KEY=
 # SFU shared auth secret
 SFU_AUTH_SECRET=
 
+# ALTCHA proof-of-work HMAC key — generate with: openssl rand -base64 32
+ALTCHA_HMAC_KEY=
+
 # TURN server secret
 TURN_SECRET=
 
