--- a/client/web/package.json
+++ b/client/web/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@murmuring/proto": "file:../../proto",
+    "altcha": "^1.1.0",
     "libsodium-wrappers-sumo": "^0.8.2",
     "mediasoup-client": "^3.18.6",
     "phoenix": "^1.8.3",
