Fix CI/CD failures across all release workflows
- Server: mix format all files
- CI: use working-directory instead of relative cd for proto builds
- Desktop: add contents:write permission, shell:bash for Windows compat
- Proto: cross-platform postbuild script (node -e instead of mkdir/cp)
- SFU: add py3-pip to Dockerfile for mediasoup worker build
- Mobile: add expo-asset dep, ITSAppUsesNonExemptEncryption, bundler moduleResolution, type shims

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -165,8 +165,8 @@ jobs:
 
       - name: Build proto dependency (for client/web)
         if: matrix.project == 'client/web'
+        working-directory: proto
         run: |
-          cd ../proto
           npm ci
           npm run build
 
@@ -318,8 +318,8 @@ jobs:
         run: command -v wasm-bindgen || cargo install wasm-bindgen-cli
 
       - name: Build proto dependency
+        working-directory: proto
         run: |
-          cd ../../proto
           npm ci
           npm run build
 
