Fix compilation warnings, mobile TS errors, desktop icons, disable mobile CI
- Server: remove unused aliases/attrs, fix unreachable clauses, correct
  HttpSignatures module reference, use list_server_channels/1
- Mobile: fix property names (server_name, content_snippet, display_name),
  remove Record<string,unknown> casts, add full mediasoup-client type shim
- Desktop: regenerate icon.ico (proper ICO format) and icon.icns (proper
  ICNS container) from source PNGs — fixes Windows RC2175 build error
- CI: disable mobile release workflow until EAS credentials are configured

--- a/.github/workflows/release-mobile.yml
+++ b/.github/workflows/release-mobile.yml
@@ -11,6 +11,8 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+    # Both platforms require developer account credentials configured in EAS — see docs/plans/future-work.md #15
+    if: false # Disabled until EAS credentials are configured
     strategy:
       fail-fast: false
       matrix:
