Fix remaining CI failures: server alias, mobile types, amd64-only Docker
- Add missing Cairn.Federation alias in voice/federation.ex
- Use any[] in Transport.on listener to match mediasoup callback signatures
- Drop arm64 from Docker builds (mediasoup C++ compile hangs under QEMU)
- Both mix compile --warnings-as-errors and npx tsc --noEmit pass locally

--- a/.github/workflows/release-server.yml
+++ b/.github/workflows/release-server.yml
@@ -49,7 +49,8 @@ jobs:
         with:
           context: ${{ matrix.context }}
           file: ${{ matrix.dockerfile }}
-          platforms: linux/amd64,linux/arm64
+          # arm64 disabled: mediasoup C++ worker takes hours under QEMU emulation
+          platforms: linux/amd64
           push: true
           tags: |
             ghcr.io/morelandjo/cairn-${{ matrix.component }}:${{ steps.version.outputs.version }}
