Fix Dialyzer and Sobelow CI failures
- Fix verify_chain_links unreachable pattern (Dialyzer)
- Add .dialyzer_ignore.exs for ExUnit false positives
- Use binary_to_term(:safe) in node_identity.ex
- Add sobelow_skip annotations to false-positive file operations
- Add .sobelow-conf ignoring Config.HTTPS and Misc.BinToTerm
- Use --skip flag in CI sobelow invocation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,7 +97,7 @@ jobs:
         run: mix dialyzer
 
       - name: Security scan (Sobelow)
-        run: mix sobelow --config --exit low
+        run: mix sobelow --config --skip --exit low
 
   # ----------------------------------------------------------------
   # TypeScript — lint, build, test (matrix across sub-projects)
