Add user-facing documentation for self-hosting and clients
Move internal design docs to docs/internal/ (gitignored) and add
practical documentation: quickstart, configuration, reverse proxy,
administration, federation, and client guides (web, desktop, mobile).

--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,7 @@ htmlcov/
 coverage/
 
 # Internal docs and plan files
-docs/
+docs/internal/
 extracted-plan.txt
 federated-platform-plan.docx
 .claude/
