Fix macOS desktop release: use app bundle instead of dmg
hdiutil fails with "Resource busy" on GitHub Actions macOS runners,
breaking DMG creation. Switch to app bundles which the tauri-action
uploads as .app.tar.gz archives.

--- a/.github/workflows/release-desktop.yml
+++ b/.github/workflows/release-desktop.yml
@@ -18,10 +18,10 @@ jobs:
         include:
           - platform: macos-latest
             target: aarch64-apple-darwin
-            bundle: dmg
+            bundle: app
           - platform: macos-latest
             target: x86_64-apple-darwin
-            bundle: dmg
+            bundle: app
           - platform: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             bundle: appimage,deb
