Add mdBook docs site with GitHub Pages deployment
Move user-facing docs into docs/src/ for mdBook, add book.toml config,
SUMMARY.md table of contents, index landing page, and a GitHub Actions
workflow that builds and deploys to GitHub Pages on push to main.

--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,7 @@ coverage/
 
 # Internal docs and plan files
 docs/internal/
+docs/book/
 extracted-plan.txt
 federated-platform-plan.docx
 .claude/
