Fix server Docker image: bump runtime Alpine 3.21 → 3.22 for OpenSSL 3.4+
OTP 28 crypto NIF requires EVP_PKEY_sign_message_init (OpenSSL 3.4+).
Alpine 3.21 ships OpenSSL 3.3 which is missing this symbol, causing the
server to crash on startup. Alpine 3.22 ships OpenSSL 3.5.

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -26,8 +26,8 @@ RUN mix compile
 # Build release
 RUN mix release
 
-# Stage 2: Runtime
-FROM alpine:3.21 AS runtime
+# Stage 2: Runtime (must match builder's Alpine for OpenSSL compatibility)
+FROM alpine:3.22 AS runtime
 
 RUN apk add --no-cache \
   libstdc++ \
