--- a/deploy/docker-compose.prod.yml
+++ b/deploy/docker-compose.prod.yml
@@ -8,7 +8,11 @@ services:
     ports:
       - "${SERVER_PORT:-4000}:4000"
     environment:
-      DATABASE_URL: "ecto://cairn:${POSTGRES_PASSWORD}@postgres:5432/cairn"
+      PGHOST: postgres
+      PGPORT: "5432"
+      PGUSER: cairn
+      PGPASSWORD: "${POSTGRES_PASSWORD}"
+      PGDATABASE: cairn
       SECRET_KEY_BASE: "${SECRET_KEY_BASE}"
       JWT_SECRET: "${JWT_SECRET}"
       PHX_HOST: "${CAIRN_DOMAIN}"
