Fix FORCE_SSL not passed to container, installer reinstall detection
- Add FORCE_SSL to docker-compose.prod.yml environment (was silently
  ignored because it wasn't mapped through to the container)
- Auto-disable FORCE_SSL when no reverse proxy is configured (prevents
  broken HTTP→HTTPS redirect loop on IP-only installs)
- Detect existing installation with warning and forced 'yes' confirmation
  before wiping data
- Fix cairn-ctl restart to use 'up -d --force-recreate' so env changes
  actually take effect (docker compose restart doesn't re-read .env)
- Fix stale volume detection to use grep|cut instead of grep -oP
- Clarify quickstart next steps to direct users to open browser first

--- a/deploy/docker-compose.prod.yml
+++ b/deploy/docker-compose.prod.yml
@@ -25,6 +25,7 @@ services:
       SFU_AUTH_SECRET: "${SFU_AUTH_SECRET}"
       TURN_SECRET: "${TURN_SECRET}"
       TURN_URLS: "${TURN_URLS:-turn:${CAIRN_DOMAIN}:3478}"
+      FORCE_SSL: "${FORCE_SSL:-true}"
       FEDERATION_ENABLED: "${FEDERATION_ENABLED:-false}"
       CAIRN_DOMAIN: "${CAIRN_DOMAIN}"
       NODE_KEY_PATH: "/app/priv/keys/node_ed25519.key"
