Insecure federation support, bump to 0.1.6
Allow federation over HTTP for operators on IP addresses or private
networks without TLS. HTTPS-first handshake with HTTP fallback when
FEDERATION_ALLOW_INSECURE=true. Insecure nodes are blocked from E2EE
channels (private/voice). Client shows persistent warning banner on
HTTP instances and insecure-peer indicators in member list and DM
dialog. Updated docs with transport security model and insecure
federation guide.

--- a/deploy/.env.example
+++ b/deploy/.env.example
@@ -6,7 +6,6 @@ CAIRN_DOMAIN=cairn.example.com
 
 # SSL enforcement — set to false to allow HTTP connections.
 # Only safe on private networks (LAN, Tailscale, Cloudflare Tunnel).
-# Cannot be disabled when FEDERATION_ENABLED=true.
 # FORCE_SSL=true
 
 # Secrets — generate with: openssl rand -base64 48
@@ -33,6 +32,8 @@ TURN_SECRET=
 
 # Federation (optional)
 # FEDERATION_ENABLED=true
+# Allow federating with HTTP-only (insecure) nodes. Requires FEDERATION_ENABLED=true.
+# FEDERATION_ALLOW_INSECURE=false
 
 # File storage (optional, defaults to local)
 # STORAGE_BACKEND=s3
