--- a/deploy/docker-compose.prod.yml
+++ b/deploy/docker-compose.prod.yml
@@ -27,6 +27,7 @@ services:
       TURN_URLS: "${TURN_URLS:-turn:${CAIRN_DOMAIN}:3478}"
       FORCE_SSL: "${FORCE_SSL:-true}"
       FEDERATION_ENABLED: "${FEDERATION_ENABLED:-false}"
+      FEDERATION_ALLOW_INSECURE: "${FEDERATION_ALLOW_INSECURE:-false}"
       CAIRN_DOMAIN: "${CAIRN_DOMAIN}"
       NODE_KEY_PATH: "/app/priv/keys/node_ed25519.key"
       STORAGE_BACKEND: "${STORAGE_BACKEND:-local}"
